<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/empresas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.lucas.projeto00.PEmpresarial.EmpresarialDadosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Nome"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/empresarial_dados_tvNome"
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Latitude"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/empresarial_dados_tvLatitude"
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="latitude"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Longitude"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/empresarial_dados_tvLongitude"
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="longitude"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <Button
        android:id="@+id/empresarial_dados_btnImgEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirMapa"
        android:text="@string/btn_AbirMapa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Telefone"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/empresarial_dados_tvTelefone"
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="telefone"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Site"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/empresarial_dados_tvSite"
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="site"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/empresarial_dados_btnSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="abrirSite"
            android:text="@string/btn_site" />

        <Button
            android:id="@+id/empresarial_dados_btnLigar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Ligar"
            android:text="@string/btn_ligar" />

        <TextView
            style="@style/letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ID"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/empresarial_dados_edtID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
